2008-07-28  Christopher Bratusek <nano-master@gmx.de>
	* themer/ : remove the themer from trunk and move
		it to the sawfish-themer branch. The reason
		for doing so, is that rep-glade is not yet
		ported to glade2, therefore the themer does
		not work.
	
	* configure.in
	* Makefile.in
	* TODO
	* OPTIONS: remove references to the themer

2008-02-18  Janek Kozicki <cosurgi@gmail.com>
	* configure.in: version 1.3.3
	
	* "Utf 8 names fix" by Timo Korvola: window titles with UTF-8 working
	and no openoffice crashes
	
	* "Pango draw() ignores font" by Yuuki Harano and Rodrigo Gallardo:
	allows using pango fonts correctly.
	
	* "Titlebar updates" by Harald van Dijk and Timo Korvola: don't forget
	to tell the running theme that window title length has changed.

	* "KDE tray fix 2" by Timo Korvola: KDE is not always using
	freedesktop.org protocol so we need to adjust a few glitches.

2008-01-20  Janek Kozicki <cosurgi@gmail.com>
	* configure.in: version 1.3.2
	
	* documentation from Derek Upham v0.12
	
	* Updated Occitan translation (Yannig Marchegay)
	
	* patch by Luis Rodrigo Gallardo Cruz taken upstream from debian:
	http://sawfish.wikia.com/wiki/Noprop_desktop_save
	Sawfish saves the size of the desktop window, and although nautilus
	requests the widget to be the same size as your screen it's forced to
	the size that sawfish saved.
	
	* patch by Rodrigo Gallardo: http://sawfish.wikia.com/wiki/Update_desktop_file
	The current Sawfish.desktop file did not comply with the
	freedesktop.org standard. 
	
	* patch by GSR: http://sawfish.wikia.com/wiki/Fix_select_workspace
	fix-select-workspace, Fixes select-workspace in
	lisp/sawfish/wm/workspace.jl to make sure it uses key params in its
	call to select-workspace*
	
	* patch by Thadeu Lima de Souza Cascardo:
	http://sawfish.wikia.com/wiki/Fix_Xlib_client_message
	sawfish had problems with 64 bit client messages.
	
	* patch by Sven Schoenung: http://sawfish.wikia.com/wiki/Blank_lines_in_prompt