@@ -1,3 +1,7 @@
+2008-07-29  Christopher Bratusek <nano-master@gmx.de>
+	* sawfish.spec.in: spec file did use deprecated keywords,
+		this patch by Ian Dall fix that.
+
 2008-07-28  Christopher Bratusek <nano-master@gmx.de>
 	* themer/ : remove the themer from trunk and move
 		it to the sawfish-themer branch. The reason
